# basin

./: .gitignore  .versionary-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  Taskfile.yml  compass_artifact_wf-ad48ca47-04c3-497a-a2ca-dc802ed47266_text_markdown.md  devenv.nix  panache.toml
.claude/agents/: add-test-problem.md
.claude/rules/: backends.md  constraints.md  problems.md  solver-composition.md
.claude/skills/ingest-paper/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-crates.yml  web.yml
benches/: rosenbrock.rs
crates/basin/: Cargo.toml  README.md
crates/basin-wasm/: Cargo.toml
crates/basin-wasm/src/: lib.rs
crates/basin/benches/: lm_backends.rs  rosenbrock.rs  solver_backends.rs
crates/basin/examples/: favicon.rs  logo.rs  nelder_mead.rs  rosenbrock.rs
crates/basin/src/: core.rs  lib.rs  line_search.rs  problems.rs  solver.rs
crates/basin/src/core/: augmented_lagrangian.rs  barrier.rs  constraint.rs  executor.rs  inner.rs  math.rs  numdiff.rs  problem.rs  rng.rs  solver.rs  state.rs  termination.rs
crates/basin/src/core/math/: cl_scaling.rs  clamp.rs  dense.rs  dense_eig.rs  faer_backend.rs  faer_sparse_backend.rs  linalg.rs  nalgebra_backend.rs  nalgebra_sparse_backend.rs  ndarray_backend.rs  sample.rs  scalar.rs  vec.rs
crates/basin/src/core/state/: lbfgs.rs
crates/basin/src/line_search/: backtracking.rs  more_thuente.rs  wolfe.rs
crates/basin/src/problems/: AGENTS.md  ackley.rs  beale.rs  booth.rs  bukin.rs  constrained_quadratic.rs  cross_in_tray.rs  easom.rs  eggholder.rs  equality_constrained_quadratic.rs  exponential_fit.rs  goldstein_price.rs  himmelblau.rs  holder_table.rs  levy.rs  matyas.rs  mccormick.rs  picheny.rs  powell_singular.rs  rastrigin.rs  rosenbrock.rs  schaffer.rs  sparse_least_squares.rs  spec.rs  sphere.rs  styblinski_tang.rs  three_hump_camel.rs  zero.rs
crates/basin/src/solver/: augmented_lagrangian_method.rs  barrier_method.rs  bfgs.rs  bounded_cma_es.rs  bounded_cma_inject.rs  brent.rs  cma_es.rs  cma_inject.rs  gauss_newton.rs  gradient_descent.rs  lbfgs.rs  lbfgsb.rs  levenberg_marquardt.rs  ma_ls_ch_cma.rs  nelder_mead.rs  projected_gradient_descent.rs  random_search.rs  ssga.rs  trf.rs
crates/basin/src/solver/lbfgs/: backend.rs  cauchy.rs  compact.rs  formk.rs  subsm.rs
crates/basin/src/solver/lbfgsb/: cauchy.rs  subsm.rs
crates/basin/tests/: augmented_lagrangian_faer.rs  augmented_lagrangian_nalgebra.rs  augmented_lagrangian_ndarray.rs  augmented_lagrangian_vec.rs  barrier_method_faer.rs  barrier_method_nalgebra.rs  barrier_method_ndarray.rs  barrier_method_vec.rs  bfgs.rs  bfgs_faer.rs  bfgs_vec.rs  bounded_cma_es_faer.rs  bounded_cma_es_nalgebra.rs  bounded_cma_es_ndarray.rs  bounded_cma_es_vec.rs  bounded_cma_inject_lbfgsb_nalgebra.rs  bounded_nelder_mead.rs  cma_es_faer.rs  cma_es_nalgebra.rs  cma_es_ndarray.rs  cma_es_vec.rs  cma_inject_lm_nalgebra.rs  cma_inject_nalgebra.rs  cma_inject_solver_failed_bubbles.rs  example_bounded_cma_inject_lm.rs  fused_problem.rs  gauss_newton_faer.rs  gauss_newton_faer_sparse.rs  gauss_newton_nalgebra.rs  gauss_newton_nalgebra_sparse.rs  inner_executor.rs  lbfgs_unbounded.rs  lbfgsb_faer.rs  lbfgsb_iter_parity.rs  lbfgsb_nalgebra.rs  lbfgsb_ndarray.rs  lbfgsb_vec.rs  levenberg_marquardt_faer.rs  levenberg_marquardt_faer_sparse.rs  levenberg_marquardt_nalgebra.rs  (+26 more)
crates/basin/tests/fixtures/: README.md  lbfgsb_driver.f  lbfgsb_rosenbrock_5d.tsv
crates/competitor-bench/: Cargo.toml
crates/competitor-bench/benches/: compare.rs  gd_nm.rs
crates/competitor-bench/src/: lib.rs
examples/: nelder_mead.rs  rosenbrock.rs
src/: core.rs  lib.rs  line_search.rs  problems.rs  solver.rs
src/core/: constraint.rs  executor.rs  math.rs  solver.rs  state.rs  termination.rs
src/core/math/: faer_backend.rs  nalgebra_backend.rs  ndarray_backend.rs  scalar.rs  vec.rs
src/line_search/: backtracking.rs
src/problems/: rosenbrock.rs  sphere.rs
src/solver/: bfgs.rs  brent.rs  gradient_descent.rs  nelder_mead.rs  step_size.rs
tests/: bfgs.rs  nelder_mead.rs  rosenbrock.rs  rosenbrock_faer.rs  rosenbrock_nalgebra.rs  rosenbrock_ndarray.rs  termination.rs
tools/: README.md  marker_config.json  pyproject.toml
web/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
web/scripts/: check-snippets.ts  collect-benchmarks.ts  collect-competitors.ts  collect-solvers.ts
web/src/: app.css  app.d.ts  app.html  prismjs.d.ts
web/src/lib/: BackendChart.svelte  ContourPlot.svelte  Controls.svelte  ConvergenceChart.svelte  CostChart.svelte  Seo.svelte  ThemeToggle.svelte  Visualizer.svelte  colormap.ts  contours.ts  nav.ts  palette.ts  problems.ts  solvers.ts  theme.svelte.ts
web/src/lib/data/: backend-benchmarks.json  benchmarks.ts  competitor-benchmarks.json  competitors.ts  solver-benchmarks.json  solvers.ts
web/src/lib/docs/: mdsvex-layout.svelte
web/src/lib/playground/: Playground.svelte  PlaygroundContour.svelte  codegen.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/benchmarks/: +page.svelte
web/src/routes/benchmarks/backends/: +page.svelte
web/src/routes/benchmarks/competitors/: +page.svelte
web/src/routes/benchmarks/solvers/: +page.svelte
web/src/routes/docs/: +layout.svelte  +page.svx
web/src/routes/docs/getting-started/: +page.svx
web/src/routes/docs/solvers/: +page.svx
web/src/routes/llms.txt/: +server.ts
web/src/routes/robots.txt/: +server.ts
web/src/routes/sitemap.xml/: +server.ts
web/src/routes/visualizer/: +page.svelte  +page.ts
web/static/: site.webmanifest
