[workspace]
resolver = "2"
members = [
    "crates/basin",
    "crates/basin-wasm",
    "crates/competitor-bench",
]
# Lockfile lives at the workspace root; member crates share dependency
# resolution. Per AGENTS.md tenet 2 (no per-version backend feature gates),
# all members must agree on a single major version per backend.

[workspace.package]
edition = "2021"
rust-version = "1.91.1"
license = "MIT"
repository = "https://github.com/jolars/basin"

[profile.release]
lto = "thin"
codegen-units = 1
