[package]
name = "basin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "An optimization library for Rust"
readme = "README.md"
keywords = ["optimization", "math", "numerics", "solver"]
categories = ["mathematics", "science"]
# Internal sub-agent docs that live alongside source for in-repo workflows
# but aren't useful to crates.io consumers.
exclude = ["src/problems/AGENTS.md"]

[lib]
name = "basin"
path = "src/lib.rs"

[features]
default = ["problems"]
# Pin one version per backend (tenet 2 in AGENTS.md). A backend major bump
# becomes a basin major bump — do not introduce per-version features.
# `nalgebra-sparse` rides along on the same feature: it's a separate crate,
# but logically part of the nalgebra story (sparse Jacobians, sparse
# Cholesky). Folding it in keeps the manifest to one nalgebra feature.
nalgebra = ["dep:nalgebra", "dep:nalgebra-sparse"]
ndarray = ["dep:ndarray"]
# `generativity` is a transitive dep of faer, surfaced here so it only enters
# the graph when `faer` is enabled.
faer = ["dep:faer", "dep:generativity"]
# Standard test-problem corpus (Rosenbrock, ...). Pure-Rust, no extra deps;
# default-on so plain `cargo test` keeps working without `--features problems`
# (integration tests can't see `cfg(test)` lib gating). Downstream can drop
# it via `default-features = false` to shrink the WASM bundle.
problems = []

[dependencies]
nalgebra = { version = "0.34", optional = true }
nalgebra-sparse = { version = "0.11", optional = true }
# Pure-Rust (no BLAS feature) so it stays wasm-compatible per the WASM hard
# constraint in AGENTS.md.
ndarray = { version = "0.17", optional = true, default-features = false }
# default-features off because faer's defaults pull in rayon (breaks wasm,
# tenet: no parallelism in default features) and npy (file I/O). We enable
# only `std` + `linalg` so the core dense types work on native and wasm.
faer = { version = "0.24", optional = true, default-features = false, features = ["std", "linalg"] }
# Transitive dep of faer, surfaced as an optional dep so it only enters the
# graph behind the `faer` feature. basin doesn't use this crate directly.
generativity = { version = "1", optional = true }
# Re-exports `std::time::Instant` on native and a wasm-compatible shim on
# `wasm32-unknown-unknown`, so `MaxTime` works on both without feature gating.
# Tiny crate, MSRV 1.60, no transitive deps on native.
web-time = "1"
# Seedable, wasm-safe RNG used by stochastic solvers (`RandomSearch`, CMA-ES,
# ...). `default-features = false` drops `std_rng` / `thread_rng` and the
# implicit `getrandom` JS-feature pull-in, so a
# `ChaCha8Rng::seed_from_u64(seed)` works on `wasm32-unknown-unknown` with
# no JS shim.
rand = { version = "0.10", default-features = false }
rand_chacha = { version = "0.10", default-features = false }
# Standard-normal sampling for CMA-ES. rand_distr 0.6 pairs with rand 0.10.
# default-features off to stay consistent with the wasm-safe rand setup.
rand_distr = { version = "0.6", default-features = false }

[dev-dependencies]

[[bench]]
name = "rosenbrock"
harness = false

# Per-backend integration tests (`tests/rosenbrock_<backend>.rs`) gate
# themselves with `#![cfg(feature = "<backend>")]` rather than declaring
# `required-features` here — keeps the manifest free of one stanza per
# backend.
